src/test/deca/syntax/valid/class/methodcall.deca
/// Description:
// 	  Test method call syntax
// 
//  Resultats:
//    ok

class Animal {}
class Canard extends Animal {}
class Poulet extends Animal {}

{
    Poulet a = new Animal();
    Canard b = new Poulet();
    Animal random_animal = Animal (b);
}